-------------
Version 0.7.2
-------------

TOOLKIT

  * General

- JetS3t's JMX instrumentation delegate is now re-initialized each time a 
  new S3Service is created, allowing users to enable/disable JMX logging 
  by adjusting System properties after a JVM has started. Note that it is 
  still not possible to enable/disable Bucket- or Object-specific event 
  logging after the JVM has started.
- JMX logging for JetS3t can be enabled on Java 1.6 systems by including
  the "jets3t.mx" system property, since the "com.sun.management.jmxremote"
  property is no longer required to turn on JMX support in the JVM.
- Improved the Windows batch scripts to correctly detect the JETS3T_HOME
  location regardless of the current directory when the JetS3t script is run. 

  * REST Implementation

- Added sanity-checking of HTTP header values as obtained from an S3Object's
  metadata map. Non-ASCII header names and header duplicates caused by
  capitalization mismatches now fail early with descriptive S3ServiceException
  errors.
- Fixed bug in signed-url based uploading that caused automatic ETag 
  verification to fail with a NullPointerException if an ETag value wasn't set
  prior to upload.

KUDOS TO:

Christian Mallwitz for the pointer to the %~dp0 script variable that greatly
improves the Windows batch scripts. 


-------------
Version 0.7.1
-------------

COCKPIT
- Fixed a menu display bug that caused the bucket and object action menus to 
  appear behind other GUI elements on some Windows systems.
- The Logging Status settings of CloudFront distributions can now be managed
  within the CloudFront Distributions dialog box (see the Tools menu).
- New "Switch login" Service menu item allows uses with multiple S3 accounts
  to quickly switch between them, once the initial log in has been performed.

TOOLKIT

  * General

- Added support for JMX instrumentation of S3Service functions. To enable
  JMX set the system property "com.sun.management.jmxremote". Instrumentation